--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,80 @@
-annotated-types==0.6.0
-asttokens==2.4.1
-blis==0.7.11
-catalogue==2.0.10
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.16.0
-colorama==0.4.6
-comm==0.2.2
-confection==0.1.4
-contourpy==1.2.1
-cycler==0.12.1
-cymem==2.0.8
-debugpy==1.8.1
-decorator==5.1.1
-en-core-web-sm==3.7.1
-executing==2.0.1
-fonttools==4.51.0
-idna==3.7
-install==1.3.5
-ipykernel==6.29.4
-ipython==8.24.0
-jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.4.0
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-kiwisolver==1.4.5
-langcodes==3.4.0
-language_data==1.2.0
-marisa-trie==1.1.0
-MarkupSafe==2.1.5
-matplotlib==3.8.4
-matplotlib-inline==0.1.7
-murmurhash==1.0.10
-nest-asyncio==1.6.0
-nltk==3.8.1
-numpy==1.26.4
-packaging==24.0
-pandas==2.2.2
-parso==0.8.4
-pillow==10.3.0
-pip==24.0
-platformdirs==4.2.1
-preshed==3.0.9
-prompt-toolkit==3.0.43
-psutil==5.9.8
-pure-eval==0.2.2
-pydantic==2.7.1
-pydantic-core==2.18.2
-Pygments==2.17.2
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-pytz==2024.1
-# pywin32==306
-pyzmq==26.0.2
-regex==2024.4.28
-requests==2.31.0
-scipy==1.13.0
-setuptools==69.5.1
-six==1.16.0
-smart-open==6.4.0
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-stack-data==0.6.3
-textblob==0.18.0.post0
-thinc==8.2.3
-tornado==6.4
-tqdm==4.66.2
-traitlets==5.14.3
-typer==0.9.4
-typing-extensions==4.11.0
-tzdata==2024.1
-urllib3==2.2.1
-wasabi==1.1.2
-wcwidth==0.2.13
-weasel==0.3.4
+annotated-types
+asttokens
+blis
+catalogue
+certifi
+charset-normalizer
+click
+cloudpathlib
+colorama
+comm
+confection
+contourpy
+cycler
+cymem
+debugpy
+decorator
+en-core-web-sm
+executing
+fonttools
+idna
+install
+ipykernel
+ipython
+jedi
+Jinja2
+joblib
+jupyter_client
+jupyter_core
+kiwisolver
+langcodes
+language_data
+marisa-trie
+MarkupSafe
+matplotlib
+matplotlib-inline
+murmurhash
+nest-asyncio
+nltk
+numpy
+packaging
+pandas
+parso
+pillow
+pip
+platformdirs
+preshed
+prompt-toolkit
+psutil
+pure-eval
+pydantic
+pydantic-core
+Pygments
+pyparsing
+python-dateutil
+pytz
+# pywin32
+pyzmq
+regex
+requests
+scipy
+setuptools
+six
+smart-open
+spacy
+spacy-legacy
+spacy-loggers
+srsly
+stack-data
+textblob
+thinc
+tornado
+tqdm
+traitlets
+typer
+typing-extensions
+tzdata
+urllib3
+wasabi
+wcwidth
+weasel
