do quantitative analysis

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,14 @@
-annotated-types
-appdirs
-asttokens
-beautifulsoup4
-blis
-catalogue
-certifi
-charset-normalizer
-click
-cloudpathlib
-colorama
-comm
-confection
-contourpy
-cycler
-cymem
-debugpy
-decorator
-executing
-fonttools
-frozendict
-html5lib
-idna
-install
 ipykernel
 ipython
-jedi
-Jinja2
-joblib
 jupyter_client
 jupyter_core
-kiwisolver
-langcodes
-language_data
-lxml
-marisa-trie
-MarkupSafe
 matplotlib
-matplotlib-inline
-multitasking
-murmurhash
-nest-asyncio
 nltk
 numpy
-packaging
 pandas
-parso
-peewee
-pillow
-pip
-platformdirs
-preshed
-prompt-toolkit
-psutil
-pure-eval
-pydantic
-pydantic_core
-Pygments
-pyparsing
-python-dateutil
-pytz
-pyzmq
-regex
-requests
 scikit-learn
 scipy
-setuptools
-six
-smart-open
-soupsieve
-spacy-legacy
-spacy-loggers
-srsly
-stack-data
 textblob
-thinc
-threadpoolctl
-tornado
-tqdm
-traitlets
-typer
-typing_extensions
-tzdata
-urllib3
-wasabi
-wcwidth
-weasel
-webencodings
 yfinance
+ta-lib
+pynance
