--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -16,6 +16,14 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt update
+        sudo apt install build-essential wget -y
+        wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz
+        tar -xzf ta-lib-0.4.0-src.tar.gz
+        cd ta-lib/
+        ./configure -prefix=/usr
+        make
+        sudo make install
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
